final build script
minified /lib folder included, but with one non-trivial behavior change. reverting the index and embed test pages to work off /source folder while we sort it out.

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   },
   "browserslist": "> 0.25%, not dead",
   "scripts": {
-    "build": "babel source --out-dir lib --copy-files --presets=@babel/preset-env,minify",
-    "run": "ws"
+    "build": "babel source --out-dir lib --copy-files --no-comments --presets=@babel/preset-env,minify",
+    "start": "ws"
   },
   "repository": {
     "type": "git",
