--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
   "devDependencies": {
     "@babel/cli": "^7.0.0",
     "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.10.4",
     "babel-preset-minify": "^0.5.1",
-    "eslint": "^7.2.0",
+    "eslint": "^7.4.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
@@ -19,9 +18,8 @@
     "local-web-server": "^4.2.1",
     "prettier": "^2.0.5"
   },
-  "browserslist": "> 0.25%, not dead",
   "scripts": {
-    "build": "babel source --out-dir lib --copy-files --no-comments --presets=@babel/preset-env,minify",
+    "build": "babel source --out-dir lib --copy-files --no-comments --presets=minify",
     "start": "ws"
   },
   "repository": {
