--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "prettier": "^2.0.5"
   },
   "scripts": {
-    "build": "babel source --out-dir lib --copy-files --no-comments --presets=minify",
+    "build": "babel source --out-dir dist --copy-files --no-comments --presets=minify",
     "start": "ws"
   },
   "repository": {
