--- a/package.json
+++ b/package.json
@@ -39,5 +39,6 @@
   "bugs": {
     "url": "https://github.com/substation-me/lodge/issues"
   },
+  "files": ["dist/**/*"],
   "homepage": "https://github.com/substation-me/lodge#readme"
 }
