--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@babel/core": "^7.0.0",
     "babel-preset-minify": "^0.5.1",
     "browser-sync": "^2.26.13",
+    "css-loader": "^5.0.1",
+    "css-minimizer-webpack-plugin": "^1.1.5",
     "cypress": "^6.2.0",
     "eslint": "^7.4.0",
     "eslint-config-airbnb-base": "^14.2.0",
@@ -19,6 +21,7 @@
     "jsdoc": "^3.6.4",
     "jsdocs": "^1.0.0",
     "local-web-server": "^4.2.1",
+    "mini-css-extract-plugin": "^1.3.3",
     "prettier": "^2.0.5",
     "webpack": "^5.11.1",
     "webpack-cli": "^4.3.0"
@@ -39,6 +42,8 @@
   "bugs": {
     "url": "https://github.com/substation-me/lodge/issues"
   },
-  "files": ["dist/**/*"],
+  "files": [
+    "dist/**/*"
+  ],
   "homepage": "https://github.com/substation-me/lodge#readme"
 }
